--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   },
   "dependencies": {
     "react": "^15.4.0",
-    "react-dom": "^15.4.0"
+ "react-dom": "^15.4.0",
+ "react-router": "^3.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -16,6 +17,8 @@
     "eject": "react-scripts eject"
   },
   "standard": {
-    "globals": ["firebase"]
+ "globals": [
+ "firebase"
+ ]
   }
 }
