--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "react": "^15.4.0",
+    "react-d3": "^0.4.0",
     "react-dom": "^15.4.0",
     "react-router": "^3.0.0"
   },
