--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
   },
   "dependencies": {
     "react": "^15.4.0",
-    "react-d3": "^0.4.0",
     "react-dom": "^15.4.0",
-    "react-router": "^3.0.0"
+    "react-router": "^3.0.0",
+    "recharts": "^0.20.5"
   },
   "scripts": {
     "start": "react-scripts start",
