--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     ]
   },
   "devDependencies": {
-    "react-scripts": "0.7.0"
+    "react-scripts": "0.7.0",
+    "standard": "latest"
   },
   "dependencies": {
     "react": "^15.4.0",
