--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "react": "^15.4.0",
     "react-dom": "^15.4.0",
     "react-router": "^3.0.0",
-    "recharts": "^0.20.5"
+    "victory": "^0.16.1"
   },
   "scripts": {
     "start": "react-scripts start",
