--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
   },
   "devDependencies": {
     "enzyme": "^2.7.1",
+    "jsdom": "^9.10.0",
     "react-addons-test-utils": "^15.4.2",
     "react-scripts": "0.7.0",
     "standard": "latest"
   },
   "dependencies": {
+    "firebase": "^3.6.9",
     "react": "^15.4.0",
     "react-dom": "^15.4.0",
     "react-router": "^3.0.0",
